--- a/30-06.md
+++ b/30-06.md
@@ -1,5 +1,5 @@
-Calcein Release Assay - DPPC:Cholesterol
-========================================
+Calcein Release Assay - DPPC:Cholesterol - III
+==============================================
 
 Today, I carried out a couple of tasks in parallel to ensure that tasks are
 finished on time. Soon as I arrive within the lab, I prepared media to
